--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,5 @@
             "destination": "/api/index.py"
         }
     ],
-    "framework": "nextjs",
-    "buildCommand": "npm run build && pip install -r requirements.txt",
-    "installCommand": "npm install"
+    "framework": "nextjs"
 }
